--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 rvm:
 - 2.2
 python:
-- "3.5"
+- '3.5'
 before_install:
-- openssl aes-256-cbc -K $encrypted_a279b8902973_key -iv $encrypted_a279b8902973_iv
-  -in gh_deploy.enc -out ~/.ssh/gh_deploy -d
+- openssl aes-256-cbc -K $encrypted_e1301b1e0dc6_key -iv $encrypted_e1301b1e0dc6_iv
+  -in id_rsa.enc -out ~/.ssh/id_rsa -d
 - chmod 600 ~/.ssh/gh_deploy
 - eval "$(ssh-agent -s)"
 - ssh-add ~/.ssh/gh_deploy
 - git config --global user.name "Travis Bot"
 - git config --global user.email guanhwang2011@gmail.com
 - cd ~
-- git clone --depth=50 --branch=dev git@github.com:OnceMore2020/oncemore2020.github.io.git blogbuild
+- git clone --depth=50 --branch=dev git@github.com:OnceMore2020/oncemore2020.github.io.git
+  blogbuild
 - cd blogbuild
 - gem install github-pages
 - npm install gitbook-cli -g
