--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ python:
 before_install:
 - openssl aes-256-cbc -K $encrypted_e1301b1e0dc6_key -iv $encrypted_e1301b1e0dc6_iv
   -in id_rsa.enc -out ~/.ssh/id_rsa -d
-- chmod 600 ~/.ssh/gh_deploy
+- chmod 600 ~/.ssh/id_rsa
 - eval "$(ssh-agent -s)"
-- ssh-add ~/.ssh/gh_deploy
+- ssh-add ~/.ssh/id_rsa
 - git config --global user.name "Travis Bot"
 - git config --global user.email guanhwang2011@gmail.com
 - cd ~
