--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 rvm:
-- 2.2
+- 2.3
 python:
-- '3.5'
+- '3.6'
 before_install:
 - openssl aes-256-cbc -K $encrypted_e1301b1e0dc6_key -iv $encrypted_e1301b1e0dc6_iv
   -in id_rsa.enc -out ~/.ssh/id_rsa -d
@@ -17,7 +17,8 @@ before_install:
 - gem install github-pages
 - npm install gitbook-cli -g
 script:
-- python compile.py
+- cd blogbuild
+- jekyll build
 after_success:
 - git add --all
 - git commit -m ":black_nib:Updated By Travis"
