--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: OncePages
 description: A life-tech blog
-url:   https://oncemore2020.github.io
+url:   https://oncemore.wang
 
 qnurl: https://omjqdrs7d.qnssl.com
 owner:
