--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: OncePages
 description: A life-tech blog
 url:   https://oncemore.wang
 
-qnurl: https://omjqdrs7d.qnssl.com
+qnurl: http://cdn.oncemore.wang
 owner:
   name: OnceMore2020
   weibo: 2615146412
