--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-name: OncePages
 description: A life-tech blog
-url:   https://oncemore.wang
+url:   https://oncemore2020.github.io
 
 qnurl: http://cdn.oncemore.wang
 owner:
